--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -55,4 +55,16 @@
   body {
     @apply bg-background text-foreground;
   }
+
+  /* Custom scrollbar styles */
+  ::-webkit-scrollbar {
+    width: 6px;
+  }
+  ::-webkit-scrollbar-thumb {
+    background-color: hsl(var(--foreground) / 0.2);
+    border-radius: 3px;
+  }
+  :hover::-webkit-scrollbar-thumb {
+    background-color: hsl(var(--foreground) / 0.4);
+  }
 }
