--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,9 @@
     --input: 0 0% 89.8%;
     --ring: 0 0% 3.9%;
     --radius: 0.75rem;
+
+    --gradient-start: hsl(var(--primary));
+    --gradient-end: hsl(var(--secondary));
   }
   .dark {
     --background: 0 0% 3.9%;
@@ -45,6 +48,36 @@
     --border: 0 0% 14.9%;
     --input: 0 0% 14.9%;
     --ring: 0 0% 83.1%;
+  }
+
+  .theme-home {
+    --background: 240 10% 3.9%; /* Gris Noir */
+    --foreground: 0 0% 98%;
+    --primary: 0 0% 98%;
+    --primary-foreground: 0 0% 9%;
+    --secondary: 240 5.9% 10%;
+    --gradient-start: hsl(240, 6%, 10%);
+    --gradient-end: hsl(240, 10%, 3.9%);
+  }
+
+  .theme-discover {
+    --background: 45 40% 90%; /* Beige */
+    --foreground: 0 0% 9%;
+    --primary: 0 0% 9%;
+    --primary-foreground: 0 0% 98%;
+    --secondary: 45 20% 95%;
+     --gradient-start: hsl(45, 30%, 85%);
+    --gradient-end: hsl(45, 40%, 90%);
+  }
+
+  .theme-products {
+    --background: 60 95% 85%; /* Jaune Citron */
+    --foreground: 0 0% 9%;
+    --primary: 0 0% 9%;
+    --primary-foreground: 0 0% 98%;
+    --secondary: 60 90% 90%;
+    --gradient-start: hsl(60, 100%, 75%);
+    --gradient-end: hsl(60, 95%, 85%);
   }
 }
 
